# ehbasic

./: .gitignore  3dplot.bas  BarnsleyFern.txt  CMakeLists.txt  Mandelbrot.txt  README.md  basic.asm  basic.py  conv.c  conv.sh  make.sh  min_mon.asm  rp6502.py  upload.py
doc/: changelog  help.rp6502
src/: basgraf.c  basgraf.h  basic.asm  basic.s  head.s  help.rp6502  ibuff.h  init.s  lang.s  main.c  main.s  min_mon.asm  min_mon.s  rp6502enhance.s  usr.s  zeropage.asm  zp.inc
tools/: CMakeLists.txt  basic.cfg  rp6502.cmake
